定型文処理などの追加

--- a/EasyClipboardHistory/Properties/Settings.settings
+++ b/EasyClipboardHistory/Properties/Settings.settings
@@ -5,5 +5,14 @@
     <Setting Name="RirekiCount" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">20</Value>
     </Setting>
+    <Setting Name="RirekiKeyData" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="RirekiTagData" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="RirekiFixedForm" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
