履歴クリアの追加（＆微修正）

--- a/EasyClipboardHistory/App.config
+++ b/EasyClipboardHistory/App.config
@@ -13,6 +13,9 @@
             <setting name="RirekiCount" serializeAs="String">
                 <value>20</value>
             </setting>
+            <setting name="RerekiSave" serializeAs="String">
+                <value>True</value>
+            </setting>
         </EasyClipboardHistory.Properties.Settings>
     </userSettings>
 </configuration>
