履歴データ検索機能追加

--- a/EasyClipboardHistory/App.config
+++ b/EasyClipboardHistory/App.config
@@ -16,6 +16,9 @@
             <setting name="RerekiSave" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ALLRirekiCount" serializeAs="String">
+                <value>100</value>
+            </setting>
         </EasyClipboardHistory.Properties.Settings>
     </userSettings>
 </configuration>
