--- a/EasyClipboardHistory/Properties/Settings.settings
+++ b/EasyClipboardHistory/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="RerekiSave" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ALLRirekiCount" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">100</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
