データが同じ場合警告する機能を追加

--- a/EasyClipboardHistory/App.config
+++ b/EasyClipboardHistory/App.config
@@ -19,6 +19,9 @@
             <setting name="ALLRirekiCount" serializeAs="String">
                 <value>100</value>
             </setting>
+            <setting name="SameWordAlert" serializeAs="String">
+                <value>False</value>
+            </setting>
         </EasyClipboardHistory.Properties.Settings>
     </userSettings>
 </configuration>
