--- a/EasyClipboardHistory/Properties/Settings.settings
+++ b/EasyClipboardHistory/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="ALLRirekiCount" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">100</Value>
     </Setting>
+    <Setting Name="SameWordAlert" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
